objects/LLC_BI__Underwriting_Summary__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Additional_Personal_Expenses__c</fullName>
        <description>The user populates this text field to capture the borrower’s additional monthly personal expenses. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s additional personal expenses. Must be a numerical value.</inlineHelpText>
        <label>Additional Personal Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CoBorrower_Current_Debt_Service__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the annualized monthly payment amount for current loans for all co-borrowers on the loan.</description>
        <label>CoBorrower Current Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CoBorrower_Current_Exposure__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the principal balance for current loans for all co-borrowers on the loan.</description>
        <label>CoBorrower Current Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CoBorrower_Current_Unfunded_Commitments__c</fullName>
        <description>This field is no longer used in calculations.</description>
        <label>CoBorrower Current Unfunded Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CoBorrower_Proposed_Debt_Service__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the annualized monthly payment amount for all loans for all co-borrowers on the loan.</description>
        <label>CoBorrower Proposed Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CoBorrower_Proposed_Exposure__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the principal balance for all co-borrowers on the loan.</description>
        <label>CoBorrower Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Debt_Service__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the annualized monthly payment amount for current loans for all entity involvements on the loan.</description>
        <formula>LLC_BI__Primary_Current_Debt_Service__c+LLC_BI__Guarantor_Current_Debt_Service__c+LLC_BI__Rel_Entity_Current_Debt_Service__c+LLC_BI__CoBorrower_Current_Debt_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Exposure__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the principal balance for current loans for all entity involvements on the loan.</description>
        <formula>LLC_BI__Primary_Current_Exposure__c+LLC_BI__Guarantor_Current_Exposure__c+LLC_BI__Rel_Entity_Current_Exposure__c+LLC_BI__CoBorrower_Current_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Unfunded_Commitments__c</fullName>
        <description>This field is no longer used in calculations.</description>
        <formula>LLC_BI__Primary_Current_Unfunded_Commitments__c+LLC_BI__Guarantor_Current_Unfunded_Commitments__c+LLC_BI__Rel_Entity_Current_Unfunded_Commitments__c+LLC_BI__CoBorrower_Current_Unfunded_Commitments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Unfunded Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Current_Debt_Service__c</fullName>
        <description>This field is required and automatically updated. The sum of the annualized monthly payment from all sections except proposed.</description>
        <label>Guarantor Current Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Current_Exposure__c</fullName>
        <description>This field is required and automatically updated. The sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section.</description>
        <label>Guarantor Current Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Current_Unfunded_Commitments__c</fullName>
        <description>This field is required and automatically updated. The sum of &apos;Unfunded&apos; for Contingent, Other &amp; Credit Facilities.</description>
        <label>Guarantor Current Unfunded Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Proposed_Debt_Service__c</fullName>
        <description>This field is required and automatically updated. The sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section + proposed loans - payoff - participation.</description>
        <label>Guarantor Proposed Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Proposed_Exposure__c</fullName>
        <description>the sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section + proposed loans - payoff - participation</description>
        <label>Guarantor Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Heating_Expenses__c</fullName>
        <description>The user populates this text field to capture average monthly heating cost. By default, this field is blank.</description>
        <inlineHelpText>Enter the price of the average monthly heating cost. Must be a numerical value.</inlineHelpText>
        <label>Heating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Living_Expenses__c</fullName>
        <description>The user populates this text field to capture the average living expenses of the borrower. By default, this field is blank.</description>
        <inlineHelpText>Enter the amount of the borrower’s average monthly living expenses. Must be a numerical value.</inlineHelpText>
        <label>Living Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Current_Debt_Service__c</fullName>
        <description>This field is required and automatically updated. The sum of the annualized monthly payment from all sections except proposed.</description>
        <label>Borrower Current Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Current_Exposure__c</fullName>
        <description>This field is required and automatically updated. The sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section.</description>
        <label>Borrower Current Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Current_Unfunded_Commitments__c</fullName>
        <description>Sum of &apos;Unfunded&apos; for Contingent, Other &amp; Credit Facilities</description>
        <label>Borrower Current Unfunded Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Proposed_Debt_Service__c</fullName>
        <description>sum of the annualized monthly payment from all sections including proposed</description>
        <label>Borrower Proposed Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Proposed_Exposure__c</fullName>
        <description>the sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section + proposed loans - payoff - participation</description>
        <label>Borrower Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Debt_Service__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the annualized monthly payment amount for all loans for all entity involvements on the loan.</description>
        <formula>LLC_BI__Primary_Proposed_Debt_Service__c+LLC_BI__Guarantor_Proposed_Debt_Service__c+LLC_BI__Rel_Entity_Proposed_Debt_Service__c+LLC_BI__CoBorrower_Proposed_Debt_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Proposed Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Exposure__c</fullName>
        <description>This field is populated automatically via the debt schedule in the spreading app. This field stores the principal balance for all entity involvements on the loan.</description>
        <formula>LLC_BI__Primary_Proposed_Exposure__c+LLC_BI__Guarantor_Proposed_Exposure__c+LLC_BI__Rel_Entity_Proposed_Exposure__c+LLC_BI__CoBorrower_Proposed_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rel_Entity_Current_Debt_Service__c</fullName>
        <description>This field is required and automatically updated. The sum of the annualized monthly payment from all sections except proposed.</description>
        <label>Related Entity Current Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rel_Entity_Current_Exposure__c</fullName>
        <description>This field is required and automatically updated. The sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section.</description>
        <label>Related Entity Current Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rel_Entity_Current_Unfunded_Commitments__c</fullName>
        <description>This field is required and automatically updated. The sum of &apos;Unfunded&apos; for Contingent, Other &amp; Credit Facilities.</description>
        <label>Related Entity Unfunded Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rel_Entity_Proposed_Debt_Service__c</fullName>
        <description>This field is required and automatically updated. The sum of the annualized monthly payment from all sections including proposed.</description>
        <label>Related Entity Proposed Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rel_Entity_Proposed_Exposure__c</fullName>
        <description>This field is required and automatically updated. The sum of the principal balance from Credit Facilities + items that are in the system in the Contingent Liability section + proposed loans - payoff - participation.</description>
        <label>Related Entity Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Beginning Date</label>
        <type>Date</type>
    </fields>
    <label>Underwriting Summary</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Underwriting Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriting Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__start_date_cannot_be_after_end_date</fullName>
        <active>false</active>
        <description>--DEPRECATED--</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>LLC_BI__Start_Date__c</errorDisplayField>
        <errorMessage>--DEPRECATED-- The beginning date cannot be after the end date.</errorMessage>
    </validationRules>
</CustomObject>